cyberWatch 0.1
========================
 - shows splashscreen
 - shows current time & date
 - shows battery capacity (with battery icon "progressbar")
 - show charging state (plug icon)
 - turn off display and cpu goes light sleep on inactivity (battery savings) - wake up by display touch
 - wakeup (and vibrate) on USB / power connect / disconnect
 - step counter
 