@@ -5,6 +5,7 @@ cyberWatch 0.1
  - shows battery capacity (with battery icon "progressbar")
  - show charging state (plug icon)
  - turn off display and cpu goes light sleep on inactivity (battery savings) - wake up by display touch
+ - use CPU light sleep  200ms during main loop (energy saving)
  - wakeup (and vibrate) on USB / power connect / disconnect
  - step counter
  
